--- a/Web/src/app/admin/category/category.component.html
+++ b/Web/src/app/admin/category/category.component.html
@@ -22,7 +22,7 @@
           <td>{{item.DatePublished}}</td>
           <td><span id='clickableAwesomeFont' (click)="ViewCategory(item.Id)"><i class="far fa-eye"></i></span></td>
           <td><span id='clickableAwesomeFont' (click)="EditCategory(item.Id)"><i class="far fa-edit"></i></span></td>
-          <td><span id='clickableAwesomeFont' (click)="DeleteCategory(item.Id, item.Image)"><i class="fas fa-trash-alt"></i></span></td>
+          <td><span id='clickableAwesomeFont' (click)="DeleteCategory(item.Id, item.Image)"><i class="fas fa-trash-alt" style="color:#a10606;"></i></span></td>
         </tr>
         </tbody>
       </table>
