--- a/Web/src/app/admin/dashboard/dashboard.component.html
+++ b/Web/src/app/admin/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
           <td>{{item.Active}}</td>
           <td><span id='clickableAwesomeFont' (click)="ViewUser(item.Id)"><i class="far fa-eye"></i></span></td>
           <td><span id='clickableAwesomeFont' (click)="EditUser(item.Id)"><i class="far fa-edit"></i></span></td>
-          <td><span id='clickableAwesomeFont' (click)="DeleteUser(item.Id)"><i class="fas fa-trash-alt"></i></span></td>
+          <td><span id='clickableAwesomeFont' (click)="DeleteUser(item.Id)"><i class="fas fa-trash-alt" style="color:#a10606;"></i></span></td>
         </tr>
         </tbody>
       </table>
