--- a/Web/src/app/admin/product/product.component.html
+++ b/Web/src/app/admin/product/product.component.html
@@ -22,7 +22,7 @@
           <td>{{item.DatePublished}}</td>
           <td><span id='clickableAwesomeFont' (click)="ViewProduct(item.Id)"><i class="far fa-eye"></i></span></td>
           <td><span id='clickableAwesomeFont' (click)="EditProduct(item.Id)"><i class="far fa-edit"></i></span></td>
-          <td><span id='clickableAwesomeFont' (click)="DeleteProduct(item.Id, item.Image)"><i class="fas fa-trash-alt"></i></span></td>
+          <td><span id='clickableAwesomeFont' (click)="DeleteProduct(item.Id, item.Image)"><i class="fas fa-trash-alt" style="color:#a10606;"></i></span></td>
         </tr>
       </tbody>
     </table>
@@ -55,11 +55,17 @@
       </div>
       <div class="form-group">
         <label for="category">Category</label>
+        <select [(ngModel)]="category" 
+        id="category" class="form-control select-control" style="text-align: left"
+         placeholder="Product Category" name="category">
+        <option *ngFor="let category of categorylist" value="{{category.Title}}">{{category.Title}}</option>
+      </select>
+      </div>
+      <div class="form-group">
+        <label for="price">Price</label>
         <div class="input-group">
-            <input type="radio" [(ngModel)]="category" id="category" name="category" value="gallery">
-            <label for="gallery" class="mb-1 mr-5">Gallery</label><br>
-            <input type="radio" [(ngModel)]="category" id="product" name="category" value="product">
-            <label for="product" class="mb-1">Product</label><br>
+          <input type="text" id="price" class="form-control" style="text-align: left" placeholder="price" name="price" 
+          [(ngModel)]="price">
         </div>
       </div>
       <div class="form-group">
