--- a/Web/src/app/cart/cart.component.html
+++ b/Web/src/app/cart/cart.component.html
@@ -5,64 +5,64 @@
     <h1 class="pt-5 pb-4" data-aos="zoom-in" data-aos-duration="2000" style="text-align: center">Checkout</h1>
     <hr data-aos="zoom-in" data-aos-duration="2000">
     <div class="col-md-8 div3 col-sm-12" data-aos="zoom-out-up" data-aos-duration="3000">
-    <table class="table">
-        <thead>
-        <tr>
-          <th></th>
-          <th>Product Details</th>
-          <th>Quantity</th>
-          <th>Price</th>
-          <th>Total</th>
-          <th>Delete</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let item of bannerlist">
-          <td style="width:100px;height:100px"><img [src]="item.Image" style="width:inherit; height: inherit;align-content: center;"></td>
-          <td>{{item.Title}}</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td><span id='clickableAwesomeFont' (click)="DeleteSelectedProduct(item.Id, item.Image)"><i class="fas fa-trash-alt"></i></span></td>
-        </tr>
-        </tbody>
-    </table>
+    <ul class="responsive-table" [hidden]="emptyCart">
+        <li class="table-row" *ngFor="let item of selectedProducts">
+          <div class="col col-1" style="width:100px;height:100px"><img [src]="item.Image" style="width:inherit; height: inherit;align-content: center;"></div>
+          <div class="col col-2">{{item.Title}}</div>
+          <div class="col col-3">{{item.Price}}</div>
+          <div class="col col-4" >
+              <span style="float:right" id='clickableAwesomeFont' (click)="removeFromCartBtnClick(item)"><i class="far fa-times-circle" style="color:#a10606;"></i></span>
+          </div>
+        </li>
+    </ul>  
+    <div class="row mt-5 justify-content-center" [hidden]="!emptyCart">
+        <h2 style="margin-top: 5%;text-align: center;word-wrap:break-word;">No products in the cart</h2>
+    </div>  
     </div>
-    <div class="col-md-4 div3 col-sm-12" data-aos="zoom-out-up" data-aos-duration="3000">
+    <div class="col-md-4 col-sm-12" data-aos="zoom-out-up" data-aos-duration="3000">
+    <div class="row justify-content-center div3">
             <form>
             <div class="form-group">
-                <label for="fullname">Name</label>
+                <label for="name">Recipient's Name</label>
                 <div class="input-group">
-                <input type="text" id="fullname" class="form-control" style="text-align: left" placeholder="name" name="fullname" 
-                [(ngModel)]="fullname">
+                <input type="text" id="name" class="form-control" style="text-align: left" placeholder="name" name="name" 
+                [(ngModel)]="name">
                 </div>
             </div>
             <div class="form-group">
-                <label for="username">Email</label>
+                <label for="phone">Recipient's Phone</label>
                 <div class="input-group">
-                    <input type="text" id="username" class="form-control" style="text-align: left" placeholder="username" name="username"
-                    [(ngModel)]="username">
+                    <input type="text" id="phone" class="form-control" style="text-align: left" placeholder="phone" name="phone"
+                    [(ngModel)]="phone">
                 </div>
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="address">Delivery Address</label>
                 <div class="input-group">
-                    <input type="password" id="password" class="form-control" style="text-align: left" placeholder="password" name="password"
-                    [(ngModel)]="password">
+                  <textarea id="address" class="form-control" style="text-align: left" placeholder="address" name="address"
+                  [(ngModel)]="address" rows="5"></textarea>
                 </div>
             </div>
             <div class="form-group">
-                <label for="confirmpassword">Confirm Password</label>
+                <label for="notes">Delivery Notes</label>
                 <div class="input-group">
-                    <input type="password" id="confirmpassword" class="form-control" style="text-align: left" placeholder="confirm password" name="confirmpassword"
-                    [(ngModel)]="confirmpassword">
+                  <textarea id="notes" class="form-control" style="text-align: left" placeholder="notes" name="notes"
+                  [(ngModel)]="notes" rows="3"></textarea>
                 </div>
             </div>
             <div class="form-group">
-                <button type="button" class="btn btn-outline-dark" (click)="SaveUser()">Save</button>
+                <label for="city">Delivery City</label>
+                <div class="input-group">
+                    <input type="text" id="city" class="form-control" style="text-align: left" placeholder="city" name="city"
+                    [(ngModel)]="city">
+                </div>
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn btn-outline-dark" (click)="ContinueToPayment()">Continue</button>
             </div>
             </form>
-        </div>
+    </div>
+    </div>
   </div>
 </section>
 </div>
