--- a/Web/src/app/landing/landing.component.html
+++ b/Web/src/app/landing/landing.component.html
@@ -2,24 +2,17 @@
 <div data-aos="fade-up" id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <img class="d-block w-100" src="../../assets/images/header1.jpg" alt="First slide">
+        <img class="d-block w-100" [src]="activeBanner.Image">
         <div class="carousel-caption d-none d-md-block">
-            <h5>Banner Text one</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+            <h5>{{activeBanner.Title}}</h5>
+            <p>{{activeBanner.Description}}</p>
         </div>
     </div>
-    <div class="carousel-item">
-        <img class="d-block w-100" src="https://i.postimg.cc/MKqwz5T1/2.jpg" alt="Second slide">
+    <div class="carousel-item" *ngFor="let item of bannerlist">
+        <img class="d-block w-100" [src]="item.Image">
         <div class="carousel-caption d-none d-md-block">
-            <h5>Banner Text one</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
-        </div>
-    </div>
-    <div class="carousel-item">
-        <img class="d-block w-100" src="https://i.postimg.cc/0y2F6Gpp/3.jpg" alt="Third slide">
-        <div class="carousel-caption d-none d-md-block">
-            <h5>Banner Text one</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+            <h5>{{item.Title}}</h5>
+            <p>{{item.Description}}</p>
         </div>
     </div>
   </div>
