--- a/Web/src/app/products/products.component.html
+++ b/Web/src/app/products/products.component.html
@@ -15,17 +15,23 @@
                     <div class="card_content">
                     <img class="d-block w-100" [src]="item.Image">
                     <p>{{item.Title}}</p>
-                    <button data-aos="zoom-in" data-aos-duration="2000" class="btnsubmit2" style="vertical-align:middle;" (click)="buyBtnClick(item)"><i class="fa fa-shopping-cart mr-2" aria-hidden="true"></i>
-                        <span>Buy </span>
+                    <button data-aos="zoom-in" data-aos-duration="2000" class="btnsubmit2" 
+                    style="vertical-align:middle;" (click)="addToCartBtnClick(item)" [hidden]="item.IsAddedToCart">
+                        <i class="fa fa-shopping-cart mr-2" aria-hidden="true"></i>
+                        <span>Add to cart </span>
+                    </button>
+                    <button data-aos="zoom-in" data-aos-duration="2000" class="btnsubmit3" 
+                    style="vertical-align:middle;" (click)="removeFromCartBtnClick(item)" [hidden]="!item.IsAddedToCart">
+                        <i class="far fa-times-circle mr-2" aria-hidden="true"></i>
+                        <span>Remove from cart </span>
                     </button>
                     </div>
                 </div>
                 </li>
             </ul>
         </div>
-        <div class="row mt-5" [hidden]="showproducts">
-            <div class="col-md-4"></div>
-            <div class="col-md-4 div3 ml-1 col-sm-12" data-aos="zoom-out-up" data-aos-duration="3000">
+        <div class="row mt-5 justify-content-center" [hidden]="showproducts">
+            <div class="col-md-4 div3 col-sm-12" data-aos="zoom-out-up" data-aos-duration="3000">
                 <h2 style="margin-top: 5%;text-align: center;word-wrap:break-word;">Currently there are no Products</h2>
             </div>
         </div>
