--- a/Web/src/styles.scss
+++ b/Web/src/styles.scss
@@ -50,28 +50,6 @@ html {
 	}
   }
 
-  .landingstyle{
-	background-image: url("assets/images/header1.jpg");
-	background-repeat: no-repeat;
-	background-size:contain;
-	background-position:center;
-	background-attachment: fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-  }
-
-  .bodyimage1 {
-	background-image: url("assets/images/mandala.jpg");
-	background-repeat: no-repeat;
-	background-size:contain;
-	background-position:center;
-	background-attachment: fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-  }
-
   section {
 	margin-top: 4%;
 	margin-bottom: 4%;
@@ -111,6 +89,18 @@ html {
 	min-height: 100%;
 	padding: 20px;
   }
+
+.cart-span{
+	font-size: 12px;
+	color: #0d0d0d;
+	background: #499c49;
+	border-radius: 50%;
+	padding: 5px;
+	position: relative;
+	left: -3px;
+	top: -10px;
+	opacity: 0.9;
+}
   
   #loginform {
 	-webkit-border-radius: 10px 10px 10px 10px;
@@ -179,6 +169,13 @@ html {
   
   
   /* FORM TYPOGRAPHY*/
+  .form-control{
+	font-size: 1.75rem;
+  }
+
+  .select-control{
+	height: 4rem !important;
+  }
   
   input[type=button], input[type=submit], input[type=reset]  {
 	background-color: #c79416;
@@ -421,7 +418,7 @@ html {
 	margin: 0;
 	padding: 0;
 	width: 12%;
-	background-color: #3d0d0d;
+	background-color: #2a4225;
 	position: fixed;
 	height: 100%;
 	overflow: auto;
@@ -474,6 +471,12 @@ html {
 	}
   }
 
+  .navbar-customized {
+    position: relative;
+	min-height: 40px;
+	margin-bottom: 0px;
+}
+
   .navbar-light .navbar-brand {
 	color: #c79416;
 	font-size: 32px;
@@ -486,11 +489,11 @@ html {
   }
   
   .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
-	color: #c79416;
+	color: #030303;
   }
   
   .navbar-light .navbar-nav .nav-link {
-	color: #c79416;
+	color: #030303;
 	padding: 8px;
   }
   
@@ -503,7 +506,9 @@ html {
   }
   
   .nav-link {
-	padding: .5rem 1rem;
+	padding: 1.5rem 1rem;
+	padding-left: 3rem !important;
+	padding-right: 3rem !important;
 	font-weight: bold;
 	font-size: 18px;
   }
@@ -521,9 +526,16 @@ html {
   }
   
   .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-	color: #501d1d;
+	color: #c79416;
 	text-decoration: underline;
   }
+
+  .fixed-top-second-row {
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+}
 
   .main {
 	margin-left: 12%;
@@ -810,6 +822,48 @@ html {
 	right: 0;
   }
 
+
+  .btnsubmit3 {
+	display: inline-block;
+	border-radius: 10px;
+	background-color: #a10606;
+	color: #ffffff;
+	text-align: center;
+	font-size: 16px;
+	padding: 6px;
+	width: 60%;
+	transition: all 1s;
+	cursor: pointer;
+	margin: 4px;
+	border-color: #a10606;
+	border: none;
+  }
+  
+  .btnsubmit3 span {
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	transition: 0.5s;
+  }
+  
+  .btnsubmit3 span:after {
+	content: '\00bb';
+	position: absolute;
+	opacity: 0;
+	top: 0;
+	right: -20px;
+	transition: 0.5s;
+  }
+  
+  .btnsubmit3:hover span {
+	padding-right: 25px;
+  }
+  
+  .btnsubmit3:hover span:after {
+	opacity: 1;
+	right: 0;
+  }
+
   .btnfixed {
 	background-color: #c79416;
 	border: none;
@@ -1038,3 +1092,105 @@ pre {
 	text-align: center;
 	font-size: 20px;
 }
+
+.fa-badge:after{
+	content:attr(value);
+	font-size:12px;
+	background: red;
+	border-radius:50%;
+	padding:3px;
+	position:relative;
+	left:-8px;
+	top:-10px;
+	opacity:0.9;
+}
+
+
+.responsive-table {
+	li {
+	  border-radius: 3px;
+	  padding: 25px 30px;
+	  display: flex;
+	  justify-content: space-between;
+	  margin-bottom: 25px;
+	}
+	.table-header {
+	  background-color: #95A5A6;
+	  font-size: 14px;
+	  text-transform: uppercase;
+	  letter-spacing: 0.03em;
+	}
+	.table-row {
+	  background-color: #ffffff;
+	  box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+	}
+	.col-1 {
+	  flex-basis: 10%;
+	}
+	.col-2 {
+	  flex-basis: 40%;
+	}
+	.col-3 {
+	  flex-basis: 25%;
+	}
+	.col-4 {
+	  flex-basis: 25%;
+	}
+	
+	@media all and (max-width: 767px) {
+	  .table-header {
+		display: none;
+	  }
+	  .table-row{
+		
+	  }
+	  li {
+		display: block;
+	  }
+	  .col {
+		
+		flex-basis: 100%;
+		
+	  }
+	  .col {
+		display: flex;
+		padding: 10px 0;
+		&:before {
+		  color: #6C7A89;
+		  padding-right: 10px;
+		  content: attr(data-label);
+		  flex-basis: 50%;
+		  text-align: right;
+		}
+	  }
+	}
+  }
+
+  .box {
+	padding: 0px 20px 10px 0px;
+	border: 2px solid rgba(82,183,136,1);
+	background-color: rgba(82,183,136,1);
+	display: inline-block;
+	border-right: 0;
+	position: relative;
+	z-index:0;
+	width: 50%;
+	color: white;
+	font-size: 18px;
+	display: flex;
+  }
+  
+  .box::after {
+	content: "";
+	position: absolute;
+	top: -2px;
+	right: -10px;
+	left: 50%;
+	bottom: -1px;
+	border: 2px solid rgba(82,183,136,1);
+	background-color: rgba(82,183,136,1);
+	border-left: 0;
+	transform-origin: bottom;
+	transform: skew(-20deg);
+	z-index:-1;
+  }
