--- a/Web/src/app/header/header.component.html
+++ b/Web/src/app/header/header.component.html
@@ -1,8 +1,47 @@
 <div class="fixed-top">
 <nav class="navbar-customized navbar-expand-lg navbar-light fixed-top-second-row" style="height: 5%;background-color: white;">
-	<div class="box justify-content-center">Welcome to Sri Lanka's biggest Online agriculture experience </div>
+    <div class="right_bar">
+        <div class="navbar-address1">
+            <ul class="list-inline">
+                <li class="pl-3" id="memberLinkPanRegister">
+                    <i class="fas fa-map-marker-alt" style="font-size:24px;color: rgb(228, 120, 31)"></i>
+                </li>
+                <li class="pb-3" id="memberLinkPanRegister">
+                    <span>No 571, Highlevel Road, Delkanda, Nugegoda</span>
+                </li>
+                <li><span>|</span></li>
+                <li>
+                    <a class="nav-link" data-aos="fade-left" data-aos-duration="900" href="/cart">
+                        <i class="fa" style="font-size:24px;color: white">&#xf07a;</i>
+                        <span class="cart-span"> {{selectedProducts}} </span>
+                    </a>
+			    </li>
+            </ul>
+        </div>
+    </div>
+    <div class="box justify-content-center">Welcome to Sri Lanka's biggest Online agriculture experience </div>
+
 </nav>
 <nav class="navbar-customized navbar-expand-lg navbar-light fixed-top-second-row" style="height: 60px;background-color: rgba(34,54,97,1);">
+    <div class="right_bar">
+        <div class="navbar-address2">
+            <ul class="list-inline">
+                <li class="pl-3" id="memberLinkPanRegister">
+                    <i class="fas fa-map-marker-alt" style="font-size:24px;color: rgb(228, 120, 31)"></i>
+                </li>
+                <li class="pt-3" id="memberLinkPanRegister">
+                    <span>No 571, Highlevel Road,<br/>Delkanda, Nugegoda</span>
+                </li>
+                <li style="font-size:32px;"><span>|</span></li>
+                <li>
+                    <a class="nav-link" data-aos="fade-left" data-aos-duration="900" href="/cart">
+                        <i class="fa" style="font-size:24px;color: white">&#xf07a;</i>
+                        <span class="cart-span"> {{selectedProducts}} </span>
+                    </a>
+			    </li>
+            </ul>
+        </div>
+    </div>
 </nav>
 <nav class="navbar-customized navbar-expand-lg navbar-light fixed-top-second-row" style="height: 50px;background-color: white;">
     <div class="container-fluid" data-aos="fade-up" [hidden]="isAdminDashboard">
