--- a/Web/src/app/payment/payment.component.html
+++ b/Web/src/app/payment/payment.component.html
@@ -125,3 +125,8 @@
   </section>
   </div>
 </div>
+<footer>
+    <div class="row justify-content-center mb-5">
+      Copyright © 2021 AgroLinks 
+    </div>
+</footer>
