--- a/Web/src/app/admin/product/product.component.html
+++ b/Web/src/app/admin/product/product.component.html
@@ -16,7 +16,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of productlist">
+        <tr *ngFor="let item of productlist | paginate: { itemsPerPage: 5, currentPage: pproducts }; let i = index">
           <td style="width:100px;height:100px"><img [src]="item.Image" style="width:inherit; height: inherit;align-content: center;"></td>
           <td>{{item.Title}}</td>
           <td>{{item.DatePublished | date:'yyyy-MM-dd'}}</td>
@@ -26,6 +26,7 @@
         </tr>
       </tbody>
     </table>
+    <pagination-controls (pageChange)="pproducts = $event" class="float-right"></pagination-controls>
     </div>
 </div>
 
@@ -55,10 +56,10 @@
       </div>
       <div class="form-group">
         <label for="category">Category</label>
-        <select [(ngModel)]="category" 
+        <select [(ngModel)]="categoryid" 
         id="category" class="form-control select-control" style="text-align: left"
          placeholder="Product Category" name="category">
-        <option *ngFor="let category of categorylist" value="{{category.Title}}">{{category.Title}}</option>
+        <option *ngFor="let category of categorylist" value="{{category.Id}}">{{category.Title}}</option>
       </select>
       </div>
       <div class="form-group">
