--- a/Web/src/app/profile/profile.component.html
+++ b/Web/src/app/profile/profile.component.html
@@ -42,3 +42,8 @@
   </div>
 </section>
 </div>
+<footer>
+    <div class="row justify-content-center mb-5">
+      Copyright © 2021 AgroLinks 
+    </div>
+</footer>
