--- a/Web/src/app/register/register.component.html
+++ b/Web/src/app/register/register.component.html
@@ -22,5 +22,9 @@
 		</div>
 	</div>
   </div>  
-
+  <footer>
+    <div class="row justify-content-center mb-5">
+      Copyright © 2021 AgroLinks 
+    </div>
+</footer>
 
