--- a/Web/src/app/services/services.component.html
+++ b/Web/src/app/services/services.component.html
@@ -40,3 +40,8 @@
 </section>
 </div>
 </div>
+<footer>
+    <div class="row justify-content-center mb-5">
+      Copyright © 2021 AgroLinks 
+    </div>
+</footer>
