--- a/Web/src/styles.scss
+++ b/Web/src/styles.scss
@@ -1072,11 +1072,17 @@ html {
 
 
 .divgallery {
-	border:2px solid rgb(216, 216, 216);
 	padding: 20px;
 	border-radius: 5px;
 	align-content: center;
 	text-align: center;
+}
+
+.divcard {
+	padding: 20px;
+	align-content: center;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	text-align: center;
 }
 
 .divanglebutton {
