--- a/Web/src/app/landing/landing.component.html
+++ b/Web/src/app/landing/landing.component.html
@@ -19,6 +19,7 @@ init();
     <div class="carousel-item active">
         <img class="d-block w-100 banner" [src]="activeBanner.Image">
         <div class="carousel-caption d-none d-md-block">
+            <h2 class="bannertext1">a step towards a better future</h2>
             <h5>{{activeBanner.Title}}</h5>
             <p>{{activeBanner.Description}}</p>
         </div>
@@ -26,34 +27,81 @@ init();
     <div class="carousel-item" *ngFor="let item of bannerlist">
         <img class="d-block w-100 banner" [src]="item.Image">
         <div class="carousel-caption d-none d-md-block">
+            <h2 class="bannertext1">a step towards a better future</h2>
             <h5>{{item.Title}}</h5>
             <p>{{item.Description}}</p>
         </div>
     </div>
   </div>
-  <a class="carousel-control-prev carousel-inner" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <a class="carousel-control-prev carousel-inner" href="#carouselExampleIndicators"
+  style="padding-top: 190px;" role="button" data-slide="prev">
+    <span aria-hidden="true"><i class="fas fa-angle-left fa-3x"></i></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next carousel-inner" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <a class="carousel-control-next carousel-inner" href="#carouselExampleIndicators" 
+  style="padding-top: 190px;" role="button" data-slide="next">
+    <span aria-hidden="true"><i class="fas fa-angle-right fa-3x"></i></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
 <div style="background-color: white;align-content: center">
+
+<section id="categories">
+    <div class="row justify-content-center">
+      <!-- <div class="col-md-1 col-sm-12 divanglebutton justify-content-center" data-aos="zoom-in-up">
+        <a (click)="AddCategory()"><span><i class="fas fa-chevron-circle-left fa-2x" style="color: #ebebeb"></i></span></a>
+      </div> -->
+      <div class="col-md-2 col-sm-3 divcategorycard m-5 justify-content-center" data-aos="zoom-in-up" 
+      *ngFor="let item of categorylist" data-aos-duration="3000" [hidden]="item.Hidden">
+        <div class="row">
+          <!-- <img class="d-block col-3" width="50%" [src]="item.Icon"> -->
+
+          <div class="col-3">
+            <img [src]="item.Icon" 
+            style="width:30px; height: 30px;align-content: center;object-fit: cover;border-radius: 50%;">
+          </div>
+          <h3 class="col-7 mt-2">{{item.Title}}</h3>
+          <span class="col-2 mt-2"><i class="fas fa-angle-right"></i></span>
+        </div>
+      </div>
+      <!-- <div class="col-md-1 col-sm-12 divanglebutton justify-content-center" data-aos="zoom-in-up">
+        <a (click)="RemoveCategory()"><span ><i class="fas fa-chevron-circle-right fa-2x" style="color: #ebebeb"></i></span></a>
+      </div> -->
+    </div>
+</section>
+
 <section id="products">
     <div class="row justify-content-center">
       <div class="col-md-1 col-sm-12 divanglebutton justify-content-center" data-aos="zoom-in-up">
-        <a (click)="AddCategory()"><span><i class="fas fa-chevron-circle-left fa-2x" style="color: #c9c9c9"></i></span></a>
+        <a (click)="AddProduct()"><span><i class="fas fa-chevron-circle-left fa-2x" style="color: #ebebeb"></i></span></a>
       </div>
       <div class="col-md-2 col-sm-12 divcard m-2 justify-content-center" data-aos="zoom-in-up" 
-      *ngFor="let item of categorylisttoshow" data-aos-duration="3000" [hidden]="item.Hidden">
-          <img class="d-block w-100" [src]="item.Image">
+      *ngFor="let item of productlist" data-aos-duration="3000" [hidden]="item.Hidden">
+          <img class="d-block w-100 mb-5" [src]="item.Image">
+          <h5 style="text-align: left;color: #c79416">Product Name</h5>
+          <p style="text-align: left;color: black"><b>{{item.Title}}</b></p>
+          <h5 style="text-align: left;color: black">Price</h5>
+          <p style="text-align: left;color: #52b788"><b>Rs {{item.Price}}</b></p>
+          <button class="btnsubmit2 float-left" 
+          style="vertical-align:middle;" (click)="addToCartBtnClick(item)" [hidden]="item.IsAddedToCart">
+              <i class="fa fa-shopping-cart mr-2" aria-hidden="true"></i>
+              <span>Add to cart </span>
+          </button>
+          <button class="btnsubmit3 float-left" 
+          style="vertical-align:middle;" (click)="removeFromCartBtnClick(item)" [hidden]="!item.IsAddedToCart">
+              <i class="far fa-times-circle mr-2" aria-hidden="true"></i>
+              <span>Remove </span>
+          </button>
+          <button class="btnsubmitfavourite float-right" 
+          style="vertical-align:middle;" (click)="removeFromCartBtnClick(item)">
+              <i class="fas fa-heart" aria-hidden="true"></i>
+          </button>
       </div>
       <div class="col-md-1 col-sm-12 divanglebutton justify-content-center" data-aos="zoom-in-up">
-        <a (click)="RemoveCategory()"><span ><i class="fas fa-chevron-circle-right fa-2x" style="color: #c9c9c9" (click)="RemoveCategory()"></i></span></a>
+        <a (click)="RemoveProduct()"><span ><i class="fas fa-chevron-circle-right fa-2x" style="color: #ebebeb"></i></span></a>
       </div>
     </div>
+    <hr class="mt-5 mb-3">
 </section>
 <!-- <section id="posts">
       <h1 data-aos="zoom-in" data-aos-duration="2000" style="text-align: center">Posts</h1>
@@ -93,31 +141,28 @@ init();
       </div>
 </section> -->
 
-<section id="aboutus">
-      <h1 class="landing-header-text" data-aos="zoom-in" data-aos-duration="2000">About Us</h1>
-      <hr data-aos="zoom-in" data-aos-duration="2000">
-      <div class="row justify-content-center">
-        <p class="textcenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor 
-            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur 
-            sint occaecat cupidatat non 
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+<section id="bgimage">
+    <div class="row justify-content-center background">
+      <p class="textstylewhite">A Total Solution Provider for all your Agricultural needs</p>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-2 col-sm-6 divcard m-5" data-aos="zoom-out-up" data-aos-duration="3000">
+          <span><i class="fas fa-seedling fa-5x"></i></span>
+          <p class="textcenter">Description</p>
       </div>
-      <div class="row justify-content-center">
-        <div class="col-md-3 col-sm-6 divtransparent" data-aos="zoom-out-up" data-aos-duration="3000">
-            <span><i class="fas fa-seedling fa-5x"></i></span>
-            <p class="textcenter">Description</p>
-        </div>
-        <div class="col-md-3 col-sm-6 divtransparent" data-aos="zoom-out-up" data-aos-duration="3000">
-            <span><i class="fas fa-seedling fa-5x"></i></span>
-            <p class="textcenter">Description</p>
-        </div>
-        <div class="col-md-3 col-sm-6 divtransparent" data-aos="zoom-out-up" data-aos-duration="3000">
-            <span><i class="fas fa-seedling fa-5x"></i></span>
-            <p class="textcenter">Description</p>
-        </div>
-     </div>
+      <div class="col-md-2 col-sm-6 divcard m-5" data-aos="zoom-out-up" data-aos-duration="3000">
+          <span><i class="fas fa-seedling fa-5x"></i></span>
+          <p class="textcenter">Description</p>
+      </div>
+      <div class="col-md-2 col-sm-6 divcard m-5" data-aos="zoom-out-up" data-aos-duration="3000">
+          <span><i class="fas fa-seedling fa-5x"></i></span>
+          <p class="textcenter">Description</p>
+      </div>
+      <div class="col-md-2 col-sm-6 divcard m-5" data-aos="zoom-out-up" data-aos-duration="3000">
+          <span><i class="fas fa-seedling fa-5x"></i></span>
+          <p class="textcenter">Description</p>
+      </div>
+   </div>
 </section>
 
 <section id="bestsellers">
@@ -125,14 +170,32 @@ init();
     <hr data-aos="zoom-in" data-aos-duration="2000">
     <div class="row justify-content-center">
       <div class="col-md-1 col-sm-12 divanglebutton justify-content-center" data-aos="zoom-in-up">
-        <a (click)="AddCategory()"><span><i class="fas fa-chevron-circle-left fa-2x" style="color: #c9c9c9"></i></span></a>
+        <a (click)="AddBestSellersProducts()"><span><i class="fas fa-chevron-circle-left fa-2x" style="color: #ebebeb"></i></span></a>
       </div>
       <div class="col-md-2 col-sm-12 divcard m-3 justify-content-center" data-aos="zoom-in-up" 
-        *ngFor="let item of categorylisttoshow" data-aos-duration="3000" [hidden]="item.Hidden">
-        <img class="d-block w-100" [src]="item.Image">
+        *ngFor="let item of bestsellersproductlist" data-aos-duration="3000" [hidden]="item.Hidden">
+        <img class="d-block w-100 mb-5" [src]="item.Image">
+          <h5 style="text-align: left;color: #c79416">Product Name</h5>
+          <p style="text-align: left;color: black"><b>{{item.Title}}</b></p>
+          <h5 style="text-align: left;color: black">Price</h5>
+          <p style="text-align: left;color: #52b788"><b>Rs {{item.Price}}</b></p>
+          <button class="btnsubmit2 float-left" 
+          style="vertical-align:middle;" (click)="addToCartBtnClick(item)" [hidden]="item.IsAddedToCart">
+              <i class="fa fa-shopping-cart mr-2" aria-hidden="true"></i>
+              <span>Add to cart </span>
+          </button>
+          <button class="btnsubmit3 float-left" 
+          style="vertical-align:middle;" (click)="removeFromCartBtnClick(item)" [hidden]="!item.IsAddedToCart">
+              <i class="far fa-times-circle mr-2" aria-hidden="true"></i>
+              <span>Remove </span>
+          </button>
+          <button class="btnsubmitfavourite float-right" 
+          style="vertical-align:middle;" (click)="removeFromCartBtnClick(item)">
+              <i class="fas fa-heart" aria-hidden="true"></i>
+          </button>
       </div>
       <div class="col-md-1 col-sm-12 divanglebutton justify-content-center" data-aos="zoom-in-up">
-        <a (click)="RemoveCategory()"><span ><i class="fas fa-chevron-circle-right fa-2x" style="color: #c9c9c9" (click)="RemoveCategory()"></i></span></a>
+        <a (click)="RemoveBestSellersProducts()"><span ><i class="fas fa-chevron-circle-right fa-2x" style="color: #ebebeb"></i></span></a>
       </div>
    </div>
 </section>
@@ -142,8 +205,26 @@ init();
     <hr data-aos="zoom-in" data-aos-duration="2000">
     <div class="row justify-content-center">
         <div class="col-md-3 col-sm-12 divgallery m-2 justify-content-center" data-aos="zoom-in-up" 
-        *ngFor="let item of categorylist" data-aos-duration="3000">
-            <img class="d-block w-100" [src]="item.Image">
+        *ngFor="let item of newarrivalsproductlist" data-aos-duration="3000">
+        <img class="d-block w-100 mb-5" [src]="item.Image">
+        <h5 style="text-align: left;color: #c79416">Product Name</h5>
+        <p style="text-align: left;color: black"><b>{{item.Title}}</b></p>
+        <h5 style="text-align: left;color: black">Price</h5>
+        <p style="text-align: left;color: #52b788"><b>Rs {{item.Price}}</b></p>
+        <button class="btnsubmit2 float-left" 
+        style="vertical-align:middle;" (click)="addToCartBtnClick(item)" [hidden]="item.IsAddedToCart">
+            <i class="fa fa-shopping-cart mr-2" aria-hidden="true"></i>
+            <span>Add to cart </span>
+        </button>
+        <button class="btnsubmit3 float-left" 
+        style="vertical-align:middle;" (click)="removeFromCartBtnClick(item)" [hidden]="!item.IsAddedToCart">
+            <i class="far fa-times-circle mr-2" aria-hidden="true"></i>
+            <span>Remove </span>
+        </button>
+        <button class="btnsubmitfavourite float-right" 
+        style="vertical-align:middle;" (click)="removeFromCartBtnClick(item)">
+            <i class="fas fa-heart" aria-hidden="true"></i>
+        </button>
         </div>
     </div> 
 </section>
