--- a/Web/src/styles.scss
+++ b/Web/src/styles.scss
@@ -663,13 +663,13 @@ html {
 
 @media (min-width: 40rem) {
   .cards_item2 {
-	width: 350px;
+	width: 300px;
   }
 }
 
 @media (min-width: 56rem) {
   .cards_item2 {
-	width: 350px;
+	width: 300px;
   }
 }
 
@@ -724,6 +724,7 @@ html {
   }
   .carousel-caption {
 	bottom: 200px;
+	text-align: left;
   }
   
   .carousel-caption h5 {
@@ -844,16 +845,14 @@ html {
   .btnsubmit2 {
 	display: inline-block;
 	border-radius: 10px;
-	background-color: #16a009;
+	background-color: #030749;
 	color: #ffffff;
 	text-align: center;
-	font-size: 16px;
+	font-size: 14px;
 	padding: 6px;
-	width: 60%;
 	transition: all 1s;
 	cursor: pointer;
-	margin: 4px;
-	border-color: #16a009;
+	border-color: #030749;
 	border: none;
   }
   
@@ -889,12 +888,10 @@ html {
 	background-color: #a10606;
 	color: #ffffff;
 	text-align: center;
-	font-size: 16px;
+	font-size: 14px;
 	padding: 6px;
-	width: 60%;
 	transition: all 1s;
 	cursor: pointer;
-	margin: 4px;
 	border-color: #a10606;
 	border: none;
   }
@@ -920,6 +917,47 @@ html {
   }
   
   .btnsubmit3:hover span:after {
+	opacity: 1;
+	right: 0;
+  }
+
+
+  .btnsubmitfavourite {
+	display: inline-block;
+	border-radius: 10px;
+	background-color: #e78e08;
+	color: #ffffff;
+	text-align: center;
+	font-size: 14px;
+	padding-left: 8px;
+	padding-right: 8px;
+	transition: all 1s;
+	cursor: pointer;
+	border-color: #e78e08;
+	border: none;
+  }
+  
+  .btnsubmitfavourite span {
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	transition: 0.5s;
+  }
+  
+  .btnsubmitfavourite span:after {
+	content: '\00bb';
+	position: absolute;
+	opacity: 0;
+	top: 0;
+	right: -20px;
+	transition: 0.5s;
+  }
+  
+  .btnsubmitfavourite:hover span {
+	padding-right: 25px;
+  }
+  
+  .btnsubmitfavourite:hover span:after {
 	opacity: 1;
 	right: 0;
   }
@@ -1085,6 +1123,15 @@ html {
   	text-align: center;
 }
 
+.divcategorycard {
+	padding: 10px;
+	align-content: center;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	display: inline-block;
+	vertical-align: middle;
+    justify-content: center;
+}
+
 .divanglebutton {
 	border:2px solid rgb(216, 216, 216);
 	padding: 20px;
@@ -1166,6 +1213,33 @@ pre {
 	word-wrap:break-word;
 	text-align: center;
 	font-size: 20px;
+}
+
+.textstylewhite{
+	margin-top:2%;
+	word-wrap:break-word;
+	text-align: center;
+	font-size: 24px;
+	font-weight: 10; 
+	padding: 15%;
+	color: rgba(238, 238, 238, 0.603);
+	font-family: Garamond, serif;
+}
+
+@media screen and (min-width: 600px) {
+	.textstylewhite {
+	  font-size: 44px;
+	}
+  }
+
+
+.bannertext1{
+	margin-top:2%;
+	word-wrap:break-word;
+	text-align: left;
+	font-size: 16px;
+	background-color: #010330;
+	padding: 5px;
 }
 
 .fa-badge:after{
@@ -1346,4 +1420,9 @@ pre {
 input,
 button {
     padding: 5px;
+}
+
+.background{
+	background: linear-gradient(rgba(1, 7, 56, 0.808), rgba(2, 12, 97, 0.781)),url('assets/images/bgimage1.jpg');
+	height: 500px;
 }
